recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:3: error: identifier expected but ')' found.
  while (x > 0.){
               ^